[SNAPSHOT]
 * Add OAuth2 support for Meetup.com (thanks to https://github.com/stevedes77)

[6.6.3]
 * fix NPE for OpenId providers

[6.6.2]
 * add PMD checks on compile
 * add all OAuth error codes from supported RFCs (incl. "invalid_token") (thanks to https://github.com/echorebel)
 * Update LinkedIn Example to API v2 (thanks to https://github.com/peternees)
 * switch to jackson dependency to parse json responses (thanks to https://github.com/galimru)

[6.5.1]
 * cleanup deprecates methods

[6.5.0]
 * separate OAuth1.0a and OAuth2.0 ServiceBuilders,
   introduce AuthorizationUrlBuilder (along with deprecation of AuthorizationUrlWithPKCE)
   add possibility to provide different scopes for each Access Token request
 * upgrade Facebook API from v2.11 to v3.2
 * upgrade VkontakteApi from 5.73 to 5.92

[6.4.1]
 * support TLS 1.3 in JDK 11 for Salesforce
 * fix NPE in Apache HTTP client in case of empty body in HTTP response (e.g. with 204 response code) (thanks to https://github.com/SainagNeelamPatnaik)
 * separate OAuth1.0a and OAuth2.0 classes

[6.3.0]
 * fix Muplipart request model and implement it for a jdk HTTP client (thanks to https://github.com/NTPape)
 * remove any Google+ mention (switch to clean Google OAuth2) (thanks to https://github.com/fvasco)
 * fix Microsoft Azure AD v1.0 and v2.0 (thanks to https://github.com/kenpusney and https://github.com/oscararias)
 * add new API Asana (https://asana.com/) (thanks to https://github.com/joestazak)
 * state param should be used only for authorization url generation, for v2 only, for Authorization Code Grant only,
   and it should be set per request, not per created OAuthService

[6.2.0]
 * add new API Microsoft Azure Active Directory (Azure AD) 2.0 (thanks to https://github.com/rzukow and https://github.com/dgrudenic)

[6.1.0]
 * add new API Keycloak (https://www.keycloak.org/) (thanks to https://github.com/JureZelic)
 * add new API Discord (https://discordapp.com/) (thanks to https://github.com/Jokuni)

[6.0.0]