@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.asynchttpclient</groupId>
             <artifactId>async-http-client</artifactId>
-            <version>2.10.0</version>
+            <version>2.10.1</version>
         </dependency>
         <dependency>
             <groupId>com.github.scribejava</groupId>
