@@ -23,7 +23,7 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>3.14.2</version>
+            <version>4.0.1</version>
         </dependency>
         <dependency>
             <groupId>com.github.scribejava</groupId>
